# personal-health-triaging-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.whisper  README.md  SECOND-KNOWLEDGE-BRAIN.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: intake.py  orchestrator.py  question_engine.py  red_flag_screener.py  session_manager.py  triage_classifier.py
api/: server.py
api/routes/: __init__.py  health_record.py  monitoring.py  triage.py  wearable.py
clinical/: config.py  red_flags.yaml  specialty_mapping.yaml  symptom_ontology.py  triage_rules.yaml
clinical/fixtures/: false_negative_cases.yaml  red_flag_cases.yaml  symptom_cases.yaml
clinical/question_trees/: abdominal_pain.yaml  chest_pain.yaml  fever.yaml  general.yaml  headache.yaml  respiratory.yaml
docs/: architecture.md  clinical_validation_protocol.md  medical_disclaimer.md  wearable_setup_guide.md
knowledge_crawler/: clinical_summarizer.py  crawler.py  schedule.py  updater.py
monitoring/: alert_manager.py  scheduler.py  tracker.py  trend_analyzer.py
nlp/: language_detector.py  medical_ner.py  severity_parser.py  symptom_extractor.py
nlp/voice/: stt.py  tts.py
nutrition/: contraindications.py  food_db.py  meal_planner.py  recommender.py
scripts/: ci_red_flag_gate.py
storage/: encryption.py  health_record_store.py
tests/: harness.py
ui/: app.py
wearable/: apple_health.py  base_adapter.py  fitbit.py  garmin.py  generic_bluetooth.py  google_health.py  normalizer.py
